css/style.css
* {
    font-size: 12px;
    color: white;
    text-align: center;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
}

[class*="col-"] {
    background-color: blue;
    padding: 10px;
    border: 1px solid white;
}



.container {
    margin-bottom: 10px;
}

.green {
    background-color: green;
    border: 1px solid blue;
}

.row.blank [class*="col-"] {
    padding: 15px 0;
}

h1 {
    color: black;
    text-align: left;
    font-size: 18px;
    font-weight: bold;
}

.justify-start {
    justify-content: flex-start !important;
    
    
}

